--- a/charts/nifi/Chart.yaml
+++ b/charts/nifi/Chart.yaml
@@ -6,5 +6,5 @@ version: 0.1.0
 appVersion: "1.16.0"
 dependencies:
   - name: nifi
-    version: ~1.0.0
-    repository: https://charts.bitnami.com/bitnami
+    version: ~0.8.0
+    repository: https://cetic.github.io/helm-charts
