--- a/charts/nifi/Chart.yaml
+++ b/charts/nifi/Chart.yaml
@@ -3,8 +3,8 @@ name: nifi
 description: A Helm chart for Apache NiFi on Kubernetes
 type: application
 version: 0.1.0
-appVersion: "1.16.0"
+appVersion: "1.23.2"
 dependencies:
   - name: nifi
-    version: ~0.8.0
+    version: 1.2.1
     repository: https://cetic.github.io/helm-charts
