--- a/charts/nifi/values.yaml
+++ b/charts/nifi/values.yaml
@@ -1,6 +1,6 @@
 nifi:
   # Number of nifi nodes
-  replicaCount: 3
+  replicaCount: 1
 
   ## Set default image, imageTag, and imagePullPolicy.
   ## ref: https://hub.docker.com/r/apache/nifi/
@@ -89,7 +89,7 @@ nifi:
     algorithm: NIFI_PBKDF2_AES_GCM_256
     # use externalSecure for when inbound SSL is provided by nginx-ingress or other external mechanism
     externalSecure: false
-    isNode: true
+    isNode: false
     httpsPort: 8443
     webProxyHost: # <clusterIP>:<NodePort> (If Nifi service is NodePort or LoadBalancer)
     clusterPort: 6007
@@ -249,7 +249,7 @@ nifi:
   ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
   ##
   persistence:
-    enabled: true
+    enabled: false
 
     # When creating persistent storage, the NiFi helm chart can either reference an already-defined
     # storage class by name, such as "standard" or can define a custom storage class by specifying
