--- a/charts/nifi/values.yaml
+++ b/charts/nifi/values.yaml
@@ -249,7 +249,7 @@ nifi:
   ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
   ##
   persistence:
-    enabled: false
+    enabled: true
 
     # When creating persistent storage, the NiFi helm chart can either reference an already-defined
     # storage class by name, such as "standard" or can define a custom storage class by specifying
