--- a/charts/nifi/values.yaml
+++ b/charts/nifi/values.yaml
@@ -1,49 +1,37 @@
 nifi:
   replicaCount: 3
 
-  ## Image configuration
-  image:
-    repository: apache/nifi
-    tag: "1.23.2"
+  properties:
+    isNode: true # Required to designate this instance as a cluster node
+    sensitiveKey: developer2025
+    clusterPort: 6007
+    webProxyHost: nifi.infra.svc
+    # cluster communication timeouts for scaling operations
+    clusterNodeConnectionTimeout: "60 sec"
+    clusterNodeReadTimeout: "60 sec"
+    zookeeperSessionTimeout: "60 sec"
 
-  ## Service configuration
-  service:
-    type: ClusterIP
-    httpsPort: 8443
-
-  ## Security configuration
-  auth:
-    singleUser:
-      username: admin
-      password: nifiPassword # At least 12 characters
-
-  ## Persistence configuration
-  persistence:
-    enabled: true
-
-  ## Use cert-manager to handle certificates
   certManager:
     enabled: true
     clusterDomain: cluster.local
-    keystorePasswd: nifiPassword
-    truststorePasswd: nifiPassword
-    # Add hostnames for all nodes
+    keystorePasswd: developer2025
+    truststorePasswd: developer2025
     additionalDnsNames:
       - localhost
-      - nifi.nifi.svc.cluster.local
+      - nifi.infra.svc
       - "*.nifi-headless.nifi.svc.cluster.local"
+    refreshSeconds: 60
+    resources:
+      requests:
+        cpu: 100m
+        memory: 128Mi
+      limits:
+        memory: 128Mi
+    certDuration: 2160h
+    caDuration: 87660h
 
-  ## Cluster configuration
-  properties:
-    isNode: true
-    clusterPort: 6007
-    webProxyHost: nifi.nifi.svc.cluster.local:8443
+  auth:
+    singleUser:
+      username: admin
+      password: developer2025 # Must to have at least 12 characters
 
-  ## Resource configuration
-  resources:
-    requests:
-      memory: "1Gi"
-      cpu: "500m"
-    limits:
-      memory: "2Gi"
-      cpu: "1000m"
