--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
           helm repo add cetic https://cetic.github.io/helm-charts
           helm repo update
 
-      - name: Lint and validate charts
+      - name: Lint NiFi Helm chart
         run: |
           cd charts/nifi
           helm dependency build
@@ -71,7 +71,7 @@ jobs:
         run: |
           VERSION=$(git rev-parse --short HEAD)
           cd charts/nifi
-          helm package . --version $VERSION --app-version $VERSION
+          helm package . --version 0.1.0-$VERSION --app-version 1.23.2-$VERSION
 
       - name: Create GitHub Release
         id: create_release
@@ -89,3 +89,14 @@ jobs:
         run: |
           echo "Changes have been deployed - Version: $(git rev-parse --short HEAD)"
           echo "ArgoCD will automatically sync the changes based on the configured syncPolicy."
+
+      - name: Update versions in ArgoCD application manifest
+        if: github.event.inputs.environment == 'prod'
+        run: |
+          VERSION=$(git rev-parse --short HEAD)
+          find apps/nifi -name "*.yaml" -type f -exec sed -i "s/targetRevision: HEAD/targetRevision: v-$VERSION/g" {} \;
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'github-actions@github.com'
+          git add apps/
+          git commit -m "Update ArgoCD application to use version v-$VERSION" || echo "No changes to commit"
+          git push
