--- a/.github/workflows/argocd-sync-status.yml
+++ b/.github/workflows/argocd-sync-status.yml
@@ -3,7 +3,7 @@ name: ArgoCD Sync Status
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */6 * * *" # Run every 6 hours
+    - cron: "0 0 */15 * *"  # Run every 15 days at midnight UTC
 
 jobs:
   check-sync:
