--- a/charts/viruNifi/templates/statefulset.yaml
+++ b/charts/viruNifi/templates/statefulset.yaml
@@ -1,12 +1,21 @@
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: {{ .Release.Name }}-nifi
+  name: {{ include "apache-nifi.fullname" . }}
   labels:
+    app: {{ include "apache-nifi.name" . | quote }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
     custom-label: "my-custom-value"
 spec:
   template:
     metadata:
+      labels:
+        app: {{ include "apache-nifi.name" . | quote }}
+        chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+        release: {{ .Release.Name | quote }}
+        heritage: {{ .Release.Service | quote }}
       annotations:
+        security.alpha.kubernetes.io/sysctls: net.ipv4.ip_local_port_range=10000 65000
         custom.pod.annotation/example: "My custom pod annotation"
