--- a/charts/viruNifi/Chart.yaml
+++ b/charts/viruNifi/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: viruNifi
+name: viru-nifi
 description: A Helm chart for Apache NiFi on Kubernetes
 type: application
 version: 0.1.0
